# uv-env

./: .gitignore  README.md  Untitled.ipynb  notebook.ipynb  pyproject.toml  requirements.txt
presentation/: demo.md  global-bottom.vue  package.json  pnpm-lock.yaml  slides.md
presentation/resources/: live-demo_script.md
presentation/setup/: shiki.ts
